syntax = 'proto3';
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "customer.model.proto";

package model;

option go_package = "shared/service";

message GetAllCustomersResponse {
  repeated Customer customers = 1;
}

service CustomerQueryService {
  rpc getCustomer(google.protobuf.StringValue) returns (Customer);
  rpc getAllCustomers(google.protobuf.Empty) returns (GetAllCustomersResponse);
}

message CommandCustomerRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
}

service CustomerCommandService {
  rpc createCustomer(CommandCustomerRequest) returns (Customer);
  rpc updateCustomer(CommandCustomerRequest) returns (Customer);
  rpc deleteCustomer(google.protobuf.StringValue) returns (google.protobuf.BoolValue);
}